--- a/2.ipynb
+++ b/2.ipynb
@@ -149,17 +149,18 @@
       "source": [
         "import math\n",
         "n1=1\n",
+        "c1=2.99792e8\n",
         "l1=450e-9\n",
         "n2=1.5\n",
         "A1=30\n",
         "sinA2=n1*math.sin(A1*math.pi/180)/n2\n",
         "A2=math.asin(sinA2)*180/math.pi\n",
         "print(f'Ilmasta lasiin suunnanmuutos on {abs(A2-A1):.1f} astetta')\n",
-        "c2=n1*c/n2\n",
+        "c2=n1*c1/n2\n",
         "print(f'Valon nopeus lasissa on {c2:.1e} m/s')\n",
-        "f=c/l1\n",
+        "f=c1/l1\n",
         "print(f'Valon taajuus on {f:.1e} Hz')\n",
-        "l2=l1*c2/c\n",
+        "l2=l1*c2/c1\n",
         "print(f'Valon aallonpituus lasissa on {l2:.1e} m')\n"
       ],
       "outputs": [
@@ -174,7 +175,7 @@
           ]
         }
       ],
-      "execution_count": 13,
+      "execution_count": 4,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -187,10 +188,132 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-09-25T20:02:47.300Z",
-          "iopub.execute_input": "2021-09-25T20:02:47.310Z",
-          "iopub.status.idle": "2021-09-25T20:02:47.327Z",
-          "shell.execute_reply": "2021-09-25T20:02:47.440Z"
+          "iopub.status.busy": "2021-09-26T17:33:33.776Z",
+          "iopub.execute_input": "2021-09-26T17:33:33.786Z",
+          "iopub.status.idle": "2021-09-26T17:33:33.806Z",
+          "shell.execute_reply": "2021-09-26T17:33:33.823Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2-7 https://cheat.abitti.fi/build/index.html?fi#aineiden-taitekertoimia perusteella etanoli"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "n1=1\n",
+        "A1=49.5\n",
+        "A2r=math.atan(7.1/10.5)\n",
+        "n2=math.sin(math.radians(A1))/math.sin(A2r)\n",
+        "print(f'Nesteen taitekerroin on {n2:.3f}')\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nesteen taitekerroin on 1.358\n"
+          ]
+        }
+      ],
+      "execution_count": 10,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-09-26T18:02:53.527Z",
+          "iopub.execute_input": "2021-09-26T18:02:53.537Z",
+          "iopub.status.idle": "2021-09-26T18:02:53.560Z",
+          "shell.execute_reply": "2021-09-26T18:02:53.570Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2-8 Valonsäde kulkee 2.5 mm paksun ilmassa olevan lasilevyn läpi. Lasin taitekerroin on 1.51 ja valonsäteen tulokulma 55 astetta. Laske yhdensuuntaissiirtymä.\n"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "n1=1\n",
+        "n2=1.51\n",
+        "A1=55\n",
+        "sinA2=n1*math.sin(A1*math.pi/180)/n2\n",
+        "A2r=math.asin(sinA2)\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "180\n"
+          ]
+        }
+      ],
+      "execution_count": 8,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-09-26T17:56:59.913Z",
+          "iopub.execute_input": "2021-09-26T17:56:59.925Z",
+          "iopub.status.idle": "2021-09-26T17:56:59.950Z",
+          "shell.execute_reply": "2021-09-26T17:56:59.958Z"
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     }
