--- a/2.ipynb
+++ b/2.ipynb
@@ -267,19 +267,25 @@
         "n1=1\n",
         "n2=1.51\n",
         "A1=55\n",
+        "A1r=math.radians(55)\n",
         "sinA2=n1*math.sin(A1*math.pi/180)/n2\n",
-        "A2r=math.asin(sinA2)\n"
+        "A2r=math.asin(sinA2)\n",
+        "dAr=abs(A1r-A2r)\n",
+        "# valonsäteen kulkema matka lasissa (hypotenuusa)\n",
+        "dsl=2.5/math.cos(A2r)\n",
+        "yss=math.sin(dAr)*dsl\n",
+        "print(f'Yhdensuuntaissiirtymä on {yss:.3f} mm')\n"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "180\n"
+            "Yhdensuuntaissiirtymä on 1.122 mm\n"
           ]
         }
       ],
-      "execution_count": 8,
+      "execution_count": 13,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -292,10 +298,10 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-09-26T17:56:59.913Z",
-          "iopub.execute_input": "2021-09-26T17:56:59.925Z",
-          "iopub.status.idle": "2021-09-26T17:56:59.950Z",
-          "shell.execute_reply": "2021-09-26T17:56:59.958Z"
+          "iopub.status.busy": "2021-09-26T18:13:44.331Z",
+          "iopub.execute_input": "2021-09-26T18:13:44.339Z",
+          "iopub.status.idle": "2021-09-26T18:13:44.463Z",
+          "shell.execute_reply": "2021-09-26T18:13:44.470Z"
         }
       }
     },
