--- a/2.ipynb
+++ b/2.ipynb
@@ -306,10 +306,40 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "2-9 Rajakulma kokonaisheijastumiselle lasi-ilma rajapinnassa on noin 42 astetta.\n",
+        "\n",
+        "Lasin läpi vinottain kuljettaessa tulee sivuttaissiirtymä.\n",
+        "\n",
+        "Prismassa tapahtuu kokonaisheijastuminen.\n"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
+      "source": [
+        "import math\n",
+        "n=1.5\n",
+        "a=math.degrees(math.asin(1/n))\n",
+        "print(f'Rajakulma on {a:.1f} astetta')"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rajakulma on 41.8 astetta\n"
+          ]
+        }
+      ],
+      "execution_count": 15,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -320,6 +350,281 @@
           "transient": {
             "deleting": false
           }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-09-27T14:34:10.803Z",
+          "iopub.execute_input": "2021-09-27T14:34:10.821Z",
+          "iopub.status.idle": "2021-09-27T14:34:10.972Z",
+          "shell.execute_reply": "2021-09-27T14:34:10.988Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2-11 lasin n=1.5, veden 1.33, ilman 1.0\n"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "nl=1.5\n",
+        "nv=1.33\n",
+        "ni=1.0\n",
+        "a=math.degrees(math.asin(1/nl))\n",
+        "print(f'Rajakulma lasista ilmaan on {a:.1f} astetta')\n",
+        "a=math.degrees(math.asin(1/nv))\n",
+        "print(f'Rajakulma vedestä ilmaan on {a:.1f} astetta')\n",
+        "a=math.degrees(math.asin(nv/nl))\n",
+        "print(f'Rajakulma lasista veteen on {a:.1f} astetta')"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rajakulma lasista ilmaan on 41.8 astetta\n",
+            "Rajakulma vedestä ilmaan on 48.8 astetta\n",
+            "Rajakulma lasista veteen on 62.5 astetta\n"
+          ]
+        }
+      ],
+      "execution_count": 16,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-09-27T18:19:28.155Z",
+          "iopub.execute_input": "2021-09-27T18:19:28.167Z",
+          "iopub.status.idle": "2021-09-27T18:19:28.193Z",
+          "shell.execute_reply": "2021-09-27T18:19:28.203Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2-13\n",
+        "$sin(\\alpha_r)=\\frac{n_2}{n_1}$\n",
+        "$n_1=\\frac{n_2}{sin(\\alpha_r)}$"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "nv=1.33\n",
+        "no=nv/math.sin(math.radians(69.5))\n",
+        "print(f'Öljyn taitekerroin on {no:.2f}')\n",
+        "lo=628/no\n",
+        "print(f'Aallonpituus öljyssä on {lo:.0f} nm')\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Öljyn taitekerroin on 1.42\n",
+            "Aallonpituus öljyssä on 442 nm\n"
+          ]
+        }
+      ],
+      "execution_count": 20,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-09-27T18:40:07.599Z",
+          "iopub.execute_input": "2021-09-27T18:40:07.610Z",
+          "iopub.status.idle": "2021-09-27T18:40:07.640Z",
+          "shell.execute_reply": "2021-09-27T18:40:07.652Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2-14 Ytimen taitekerroin on 1.47, kuoren 1.45.\n",
+        "\n",
+        "Kirjan vastaus on korkeintaan 14 astetta. Alla korkeintaan 9.5 astetta."
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "ny=1.47\n",
+        "nk=1.45\n",
+        "a=math.degrees(math.asin(nk/ny))\n",
+        "print(f'Rajakulma on {a:.2f} astetta')"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rajakulma on 80.54 astetta\n"
+          ]
+        }
+      ],
+      "execution_count": 26,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-09-27T18:58:10.858Z",
+          "iopub.execute_input": "2021-09-27T18:58:10.871Z",
+          "iopub.status.idle": "2021-09-27T18:58:10.901Z",
+          "shell.execute_reply": "2021-09-27T18:58:10.914Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2-15 Kuinka suuren alueen sukeltaja näkee 3m metriä vedenpinnan alla ollessa kokonaisheijastumisen vuoksi.\n"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "d=3*math.tan(math.asin(1/1.33))\n",
+        "print(f'Näkyvän ympyrän halkaisija on {d:.1f} m')"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Näkyvän ympyrän halkaisija on 3.4 m\n"
+          ]
+        }
+      ],
+      "execution_count": 24,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-09-27T18:56:30.688Z",
+          "iopub.execute_input": "2021-09-27T18:56:30.702Z",
+          "iopub.status.idle": "2021-09-27T18:56:30.734Z",
+          "shell.execute_reply": "2021-09-27T18:56:30.748Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2-16"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "c=2.99792e8\n",
+        "ny=1.47\n",
+        "nk=1.43\n",
+        "a=math.degrees(math.asin(nk/ny))\n",
+        "print(f'Rajakulma on {a:.2f} astetta')\n",
+        "print(f'Valon nopeus lasissa on {c/ny:.2e} ja muovissa {c/nk:.2e}')"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rajakulma on 76.60 astetta\n",
+            "Valon nopeus lasissa on 2.04e+08 ja muovissa 2.10e+08\n"
+          ]
+        }
+      ],
+      "execution_count": 28,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-09-27T19:01:10.461Z",
+          "iopub.execute_input": "2021-09-27T19:01:10.476Z",
+          "iopub.status.idle": "2021-09-27T19:01:10.508Z",
+          "shell.execute_reply": "2021-09-27T19:01:10.521Z"
         }
       }
     }
