kappaleen 4 runko päivitetty

--- a/4.ipynb
+++ b/4.ipynb
@@ -4,9 +4,20 @@
       "cell_type": "markdown",
       "source": [
         "# Valon aaltoilmiöt\n",
-        "* interferenssi\n",
-        "* diffraktio\n",
-        "* hila"
+        "$n_{12}=\\frac{sin \\alpha_1}{sin \\alpha_2}=\\frac{c_1}{c_2}=\\frac{\\lambda_1}{\\lambda_2}=\\frac{n_2}{n_1}$\n",
+        "## interferenssi\n",
+        "$2d=k\\lambda$ heijastuneet aallot kumoavat toisensa<br>\n",
+        "$2d=(k+½)\\lambda$ heijastuneet aallot vahvistavat toisiaan<br>\n",
+        "d=kalvon paksuus<br>\n",
+        "$\\lambda$=aallonpituus\n",
+        "\n",
+        "## diffraktio\n",
+        "Palloaallot interferoivat keskenään<br>\n",
+        "$d sin \\alpha = k \\lambda, k=0, 1, 2, 3..$<br>\n",
+        "$\\alpha$=taipumiskulma<br>\n",
+        "d=rakojen väli<br>\n",
+        "## hila\n",
+        "Sama ilmiö kuin kaksoisraossa, mutta voimakkaampana rakojen pienen välin vuoksi joten valkoinen valo hajoaa "
       ],
       "metadata": {
         "nteract": {
@@ -88,7 +99,7 @@
       "source": [
         "4-5 \n",
         "\n",
-        "Kirjan vastaus a) 2.74 um b) 41.1 astetta"
+        "Kirjan vastaus a) 2.74 μm b) 41.1 astetta"
       ],
       "metadata": {
         "nteract": {
@@ -352,7 +363,7 @@
       "source": [
         "4-16\n",
         "\n",
-        "Kirjan vastaus a) 13 um b) 600 nm"
+        "Kirjan vastaus a) 13 μm b) 600 nm"
       ],
       "metadata": {
         "nteract": {
