--- a/4.ipynb
+++ b/4.ipynb
@@ -664,7 +664,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4-17\n",
+        "4-17 Spektrometrilla tutkitaan valkoista valoa, joka tulee kohtisuorasti hilalle, jonka hilavakio on 1.74 μm. Mihin kohtiin 1.2 metrin päässä hilan takana olevalle varjostimelle tulee näkyvästä valosta (430-750 THz) spektri.\n",
         "\n",
         "Kirjan vastaus 28 cm - 53 cm, 62 cm - 160 cm"
       ],
@@ -678,9 +678,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
+      "source": [
+        "a=1.2;\n",
+        "d=1.74e-6;\n",
+        "c=2.99792458e8;\n",
+        "function b(f,k){\n",
+        "  l=c/f;\n",
+        "  alpha=Math.asin(k*l/d);\n",
+        "  return Math.tan(alpha)*a;\n",
+        "}\n",
+        "for(k=1;k<3;k++){ \n",
+        "    console.log('k=%d: %d - %d m',\n",
+        "                k,b(750e12,k).toFixed(3),b(430e12,k).toFixed(3));\n",
+        "}\n",
+        "            "
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "k=1: 0.283 - 0.525 m\n",
+            "k=2: 0.621 - 1.608 m\n"
+          ]
+        }
+      ],
+      "execution_count": 52,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -691,6 +714,12 @@
           "transient": {
             "deleting": false
           }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-04T17:02:04.968Z",
+          "iopub.execute_input": "2021-10-04T17:02:04.981Z",
+          "iopub.status.idle": "2021-10-04T17:02:05.019Z",
+          "shell.execute_reply": "2021-10-04T17:02:05.036Z"
         }
       }
     }
