--- a/7.ipynb
+++ b/7.ipynb
@@ -3,8 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Magneettikenttä\n",
-        "## Magneettinen vuorovaikutus"
+        "# Magneettikenttä"
       ],
       "metadata": {
         "nteract": {
@@ -50,9 +49,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "5-8 https://en.wikipedia.org/wiki/Meissner_effect"
-      ],
+      "source": [],
       "metadata": {
         "nteract": {
           "transient": {
