--- a/7.ipynb
+++ b/7.ipynb
@@ -16,6 +16,8 @@
     {
       "cell_type": "code",
       "source": [
+        "using Printf\n",
+        "using Dates\n",
         "@printf \"%s\\n\" Dates.now();\n",
         "versioninfo(verbose=true);"
       ],
@@ -24,7 +26,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2021-10-05T21:17:31.662\n",
+            "2021-10-06T21:05:28.541\n",
             "Julia Version 1.5.4\n",
             "Commit 69fcb5745b (2021-03-11 19:13 UTC)\n",
             "Platform Info:\n",
@@ -32,17 +34,17 @@
             "      Microsoft Windows [Version 10.0.19043.1237]\n",
             "  CPU: Intel(R) Core(TM) i7-8650U CPU @ 1.90GHz: \n",
             "              speed         user         nice          sys         idle          irq\n",
-            "       #1  2112 MHz   21448437            0     40930156    371182859      3192968  ticks\n",
-            "       #2  2112 MHz   16327546            0     26153687    391079843       282265  ticks\n",
-            "       #3  2112 MHz   27440468            0     44715953    361404656       481437  ticks\n",
-            "       #4  2112 MHz   17813375            0     28845812    386901890       270921  ticks\n",
-            "       #5  2112 MHz   25237984            0     43878531    364444562       447687  ticks\n",
-            "       #6  2112 MHz   16154421            0     29417171    387989468       287375  ticks\n",
-            "       #7  2112 MHz   24218593            0     41340046    368002421       411453  ticks\n",
-            "       #8  2112 MHz   18671015            0     28824515    386065531       245765  ticks\n",
+            "       #1  2112 MHz   23826687            0     44473156    415515796      3655578  ticks\n",
+            "       #2  2112 MHz   18156171            0     28133156    437525937       305343  ticks\n",
+            "       #3  2112 MHz   30339390            0     48625328    404850546       525781  ticks\n",
+            "       #4  2112 MHz   19612281            0     31412609    432790375       298328  ticks\n",
+            "       #5  2112 MHz   27683546            0     47297468    408834250       485718  ticks\n",
+            "       #6  2112 MHz   17730328            0     31959000    434125921       314156  ticks\n",
+            "       #7  2112 MHz   26611453            0     44677359    412526437       451312  ticks\n",
+            "       #8  2112 MHz   20715843            0     31331750    431767656       265671  ticks\n",
             "       \n",
-            "  Memory: 23.846885681152344 GB (8352.15625 MB free)\n",
-            "  Uptime: 783013.0 sec\n",
+            "  Memory: 23.846885681152344 GB (6394.9765625 MB free)\n",
+            "  Uptime: 868691.0 sec\n",
             "  Load Avg:  0.0  0.0  0.0\n",
             "  WORD_SIZE: 64\n",
             "  LIBM: libopenlibm\n",
@@ -64,7 +66,7 @@
           ]
         }
       ],
-      "execution_count": 26,
+      "execution_count": 5,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -77,23 +79,203 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-10-05T18:17:31.764Z",
-          "iopub.execute_input": "2021-10-05T18:17:31.771Z",
-          "iopub.status.idle": "2021-10-05T18:17:31.823Z"
+          "iopub.status.busy": "2021-10-06T18:05:28.567Z",
+          "iopub.execute_input": "2021-10-06T18:05:28.578Z",
+          "iopub.status.idle": "2021-10-06T18:05:30.886Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-4 a) vertaile protonille mg ja qvB, kun  B=50 μT ja nopeus 1Mm/s\n",
+        "<br>\n",
+        "b) osoita, että qvB yksikkö on N <br>\n",
+        "https://en.wikipedia.org/wiki/Tesla_(unit)<br>\n",
+        "$qvB= C \\frac{m}{s} T = $ <br>\n",
+        "$ A s  \\frac{m}{s} \\frac{kg}{A s^2} $ <br>\n",
+        "$ \\frac{A s m kg}{s A s s}$ <br>\n",
+        "$ \\frac{m kg}{s^2}$ <br>\n",
+        "$ N $  <br>"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
     {
       "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
+      "source": [
+        "mp=1.6726231e-27\n",
+        "g=9.8\n",
+        "q=1.6021773e-19\n",
+        "B=50e-6\n",
+        "v=1e6\n",
+        "Fg=mp*g\n",
+        "Fb=q*v*B\n",
+        "@printf \"Magneettinen voima on %6.2e kertainen \" Fb/Fg"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Magneettinen voima on 4.89e+08 kertainen "
+          ]
+        }
+      ],
+      "execution_count": 6,
       "metadata": {
         "collapsed": true,
         "jupyter": {
           "source_hidden": false,
           "outputs_hidden": false
         },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-06T18:26:52.563Z",
+          "iopub.execute_input": "2021-10-06T18:26:52.575Z",
+          "iopub.status.idle": "2021-10-06T18:26:52.880Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-5\n",
+        "\n",
+        "Kirjan vastaukset:<br> \n",
+        "a) 3.6fN etelään b) 2.2 fN liikesuuntaan nähden oikealle"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-6\n",
+        "\n",
+        "Kirjan vastaukset:"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-7\n",
+        "\n",
+        "Kirjan vastaus: 0.4 kV"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-8\n",
+        "\n",
+        "Kirjan vastaus:0.17 MV/m, alas"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-9\n",
+        "\n",
+        "Kirjan vastaukset: a) 4.2 MeV b) 6.9 MHz"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-10\n",
+        "\n",
+        "Kirjan vastaukset: a) 11 MHz b) 1.4 T"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-11\n",
+        "\n",
+        "Kirjan vastaukset: a) 0.36 fN, liikesuuntaan nähden oikealle<br>\n",
+        "b) 0.2 m c) 0.14 μs"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-13\n",
+        "\n",
+        "Kirjan vastaus: 10.2 mm"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-14\n",
+        "\n",
+        "Kirjan vastaukset: a) alaosa b) 2.1 mm/s vasemmalle"
+      ],
+      "metadata": {
         "nteract": {
           "transient": {
             "deleting": false
