--- a/7.ipynb
+++ b/7.ipynb
@@ -149,7 +149,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "7-5\n",
+        "7-5 Laske voima.<br>\n",
+        "a) Protoni liikkuu idästä länteen. v=1.5 Mm/s, B=15 mT kohti maata. <br>\n",
+        "b) v=2.5 Mm/s, B=5.5 mT\n",
         "\n",
         "Kirjan vastaukset:<br> \n",
         "a) 3.6fN etelään b) 2.2 fN liikesuuntaan nähden oikealle"
@@ -163,17 +165,94 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "q=1.6021773e-19\n",
+        "B=15e-3\n",
+        "v=1.5e6\n",
+        "@printf \"a) voima on %6.2e N\\n\" q*v*B\n",
+        "v=2.5e6\n",
+        "B=5.5e-3\n",
+        "@printf \"b) voima on %6.2e N\\n\" q*v*B"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a) voima on 3.60e-15 N\n",
+            "b) voima on 2.20e-15 N\n"
+          ]
+        }
+      ],
+      "execution_count": 11,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-06T18:58:14.457Z",
+          "iopub.execute_input": "2021-10-06T18:58:14.467Z",
+          "iopub.status.idle": "2021-10-06T18:58:14.488Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "7-6\n",
+        "7-6 Elektroni lähtee levosta 0 V potentiaalista. Määritä elektronin nopeus ja liike-energia 150 V:n potentiaalissa.\n",
         "\n",
-        "Kirjan vastaukset:"
+        "Kirjan vastaukset: 7.3 Mm/s ja 2.4e-17 J"
       ],
       "metadata": {
         "nteract": {
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q=1.6021773e-19\n",
+        "me=9.1093897e-31\n",
+        "U=150\n",
+        "v=sqrt(2*q*U/me)\n",
+        "@printf \"Nopeus on %6.2e m/s ja energia %6.2e J\\n\" v q*U"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nopeus on 7.26e+06 m/s ja energia 2.40e-17 J\n"
+          ]
+        }
+      ],
+      "execution_count": 13,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-06T19:06:28.238Z",
+          "iopub.execute_input": "2021-10-06T19:06:28.251Z",
+          "iopub.status.idle": "2021-10-06T19:06:28.272Z"
         }
       }
     },
