--- a/7.ipynb
+++ b/7.ipynb
@@ -259,7 +259,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "7-7\n",
+        "7-7 Mikä jännite U tarvitaan 16 mm leyvyisen kenttään, jotta protoniin vaikuttaa saman suuruinen sähköinen voima kuin siihen kohdistuu 1.1 Mm/s nopeudella magneettikentässä, jonka suuruus on 23 mT.<br>\n",
+        "$ F_m=qvB=F_s=qE, E=\\frac{U}{d}$\n",
         "\n",
         "Kirjan vastaus: 0.4 kV"
       ],
@@ -272,9 +273,48 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "v=1.1e6\n",
+        "B=23e-3\n",
+        "E=v*B\n",
+        "d=0.016\n",
+        "@printf \"E=%.2e -> U=%.1f kV\\n\" E E*d/1000"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "E=2.53e+04 -> U=0.4 kV\n"
+          ]
+        }
+      ],
+      "execution_count": 23,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-07T18:31:04.341Z",
+          "iopub.execute_input": "2021-10-07T18:31:04.352Z",
+          "iopub.status.idle": "2021-10-07T18:31:04.376Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "7-8\n",
+        "7-8 $Ca^{2+}$ ionit kiihdytetään 42 kV jännitteellä, jonka jälkeen ne tulevat kohtisuorassa toisiaan vastaan oleviin sähkö- ja magneettikenttiin. B=270 mT. Ionin massa on 6.6e-26 kg. Määritä sähkökentän voimakkuus, kun ionit jatkavat matkaa alkuperäiseen suuntaan.\n",
+        "\n",
+        "Lasketaan ensin nopeus ja sen jälkeen E.\n",
         "\n",
         "Kirjan vastaus:0.17 MV/m, alas"
       ],
@@ -283,6 +323,47 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q=2*1.6021773e-19\n",
+        "m=6.6e-26\n",
+        "U=42e3\n",
+        "v=sqrt(2*q*U/m)\n",
+        "@printf \"Nopeus on %.2e m/s\\n\" v\n",
+        "B=270e-3\n",
+        "E=v*B\n",
+        "@printf \"E=%.2f MV/m\\n\" E/1e6"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nopeus on 6.39e+05 m/s\n",
+            "E=0.17 MV/m\n"
+          ]
+        }
+      ],
+      "execution_count": 29,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-07T18:47:03.413Z",
+          "iopub.execute_input": "2021-10-07T18:47:03.425Z",
+          "iopub.status.idle": "2021-10-07T18:47:03.446Z"
         }
       }
     },
